vest-dsl/test/bad/const_array_len_mismatch.vest
const BAR: [u16; 5] = [1, 2, 3, 4]
